    - chatgtp my ass
    - Get the fluid positions code to behave
    - Allow pipe to grounds to be placed against the factory
    - Add a compound entity for the fluidboxes
    - Simplify localization
    - Route factory index changes through Buildings.set_factory_index
    - Fix building held factory over existing factory
    - Bug squashing
    - Prepare the triggers for ingredients & done
---------------------------------------------------------------------------------------------------
Version: 0.0.8
Date: 2025. 06. 10
  Info:
    - Calculate the amount of slots needed and filter them
    - Set the bar too, and skip the crashing ghosts
    - Setup the initial hidden surface
    - Setup the constant and decider combinators
    - Fill the constant combinator with the requirements
    - Check if all the starting items are present with circuits
    - Create crafter prototype with door light
    - Drop the glow visualization
    - Give each factory a 60s crafter
    - Kill all children when the parent dies
    - Setup the eei
    - Make the doorframes selectable for progress
    - Disable inserters on the crafter
    - Detect trying to place a factory over another factory
---------------------------------------------------------------------------------------------------
Version: 0.0.7
Date: 2025. 06. 08
  Info:
    - Listen for the build events
    - Persist factory index in ghosts
    - Make the factory index guesser more elaborate
    - Setup the 4 lines of luarendering
    - Set default luarendering text
    - Increment factory count upon placement
    - Decrement factory count when removing a factory
    - Mark the factories exempt from lightning
    - Support blueprinting
    - Unconfigure buildings when factory gets deleted
    - Have code ready to support copying by pipette
    - Render text for factory ghosts too
    - Override serpent better
    - Allow copy pasting between tiers and ghosts
    - Change factories from reversed array to indexed